tests/data/placebo/test_asg_network_location/autoscaling.DescribeAutoScalingGroups_1.json
{
    "status_code": 200,
    "data": {
        "AutoScalingGroups": [
            {
                "AutoScalingGroupName": "c7n-image-age-test",
                "AutoScalingGroupARN": "arn:aws:autoscaling:us-east-1:644160558196:autoScalingGroup:9edc8896-61e5-4e7a-b4ab-62b41ea7064d:autoScalingGroupName/c7n-image-age-test",
                "LaunchConfigurationName": "test-offhours",
                "MinSize": 0,
                "MaxSize": 0,
                "DesiredCapacity": 0,
                "DefaultCooldown": 300,
                "AvailabilityZones": [
                    "us-east-1a"
                ],
                "AvailabilityZoneIds": [
                    "use1-az4"
                ],
                "LoadBalancerNames": [],
                "TargetGroupARNs": [],
                "HealthCheckType": "EC2",
                "HealthCheckGracePeriod": 300,
                "Instances": [],
                "CreatedTime": {
                    "__class__": "datetime",
                    "year": 2019,
                    "month": 11,
                    "day": 4,
                    "hour": 2,
                    "minute": 49,
                    "second": 1,
                    "microsecond": 105000
                },
                "SuspendedProcesses": [
                    {
                        "ProcessName": "AZRebalance",
                        "SuspensionReason": "User suspended at 2024-01-25T16:45:06Z"
                    }
                ],
                "VPCZoneIdentifier": "subnet-914763e7",
                "EnabledMetrics": [],
                "Tags": [
                    {
                        "ResourceId": "c7n-image-age-test",
                        "ResourceType": "auto-scaling-group",
                        "Key": "AmazonECSManaged",
                        "Value": "Right",
                        "PropagateAtLaunch": true
                    }
                ],
                "TerminationPolicies": [
                    "Default"
                ],
                "NewInstancesProtectedFromScaleIn": false,
                "ServiceLinkedRoleARN": "arn:aws:iam::644160558196:role/aws-service-role/autoscaling.amazonaws.com/AWSServiceRoleForAutoScaling",
                "TrafficSources": [],
                "AvailabilityZoneDistribution": {
                    "CapacityDistributionStrategy": "balanced-best-effort"
                },
                "CapacityReservationSpecification": {
                    "CapacityReservationPreference": "default"
                },
                "InstanceLifecyclePolicy": {
                    "RetentionTriggers": {
                        "TerminateHookAbandon": "terminate"
                    }
                }
            },
            {
                "AutoScalingGroupName": "c7n-nl-asg-1",
                "AutoScalingGroupARN": "arn:aws:autoscaling:us-east-1:644160558196:autoScalingGroup:dd923ae6-fc87-4455-b237-95e1eb1191b4:autoScalingGroupName/c7n-nl-asg-1",
                "LaunchTemplate": {
                    "LaunchTemplateId": "lt-00fd2c26f2fbca86e",
                    "LaunchTemplateName": "c7n-nl-lt-1",
                    "Version": "$Latest"
                },
                "MinSize": 0,
                "MaxSize": 0,
                "DesiredCapacity": 0,
                "DefaultCooldown": 300,
                "AvailabilityZones": [
                    "us-east-1b",
                    "us-east-1d"
                ],
                "AvailabilityZoneIds": [
                    "use1-az6",
                    "use1-az2"
                ],
                "LoadBalancerNames": [],
                "TargetGroupARNs": [],
                "HealthCheckType": "EC2",
                "HealthCheckGracePeriod": 0,
                "Instances": [],
                "CreatedTime": {
                    "__class__": "datetime",
                    "year": 2026,
                    "month": 8,
                    "day": 7,
                    "hour": 23,
                    "minute": 51,
                    "second": 47,
                    "microsecond": 58000
                },
                "SuspendedProcesses": [],
                "VPCZoneIdentifier": "subnet-efbcccb7,subnet-044d9e3b66dccd75a",
                "EnabledMetrics": [],
                "Tags": [
                    {
                        "ResourceId": "c7n-nl-asg-1",
                        "ResourceType": "auto-scaling-group",
                        "Key": "AppId",
                        "Value": "APP1001",
                        "PropagateAtLaunch": false
                    },
                    {
                        "ResourceId": "c7n-nl-asg-1",
                        "ResourceType": "auto-scaling-group",
                        "Key": "c7n-fixture",
                        "Value": "network-location",
                        "PropagateAtLaunch": false
                    }
                ],
                "TerminationPolicies": [
                    "Default"
                ],
                "NewInstancesProtectedFromScaleIn": false,
                "ServiceLinkedRoleARN": "arn:aws:iam::644160558196:role/aws-service-role/autoscaling.amazonaws.com/AWSServiceRoleForAutoScaling",
                "TrafficSources": [],
                "AvailabilityZoneDistribution": {
                    "CapacityDistributionStrategy": "balanced-best-effort"
                },
                "CapacityReservationSpecification": {
                    "CapacityReservationPreference": "default"
                },
                "InstanceLifecyclePolicy": {
                    "RetentionTriggers": {
                        "TerminateHookAbandon": "terminate"
                    }
                }
            },
            {
                "AutoScalingGroupName": "c7n-nl-asg-2",
                "AutoScalingGroupARN": "arn:aws:autoscaling:us-east-1:644160558196:autoScalingGroup:0021c3f7-5f34-47e2-ae06-0b20bdde32e4:autoScalingGroupName/c7n-nl-asg-2",
                "LaunchTemplate": {
                    "LaunchTemplateId": "lt-0d7a2070ae524b0b5",
                    "LaunchTemplateName": "c7n-nl-lt-2",
                    "Version": "$Latest"
                },
                "MinSize": 0,
                "MaxSize": 0,
                "DesiredCapacity": 0,
                "DefaultCooldown": 300,
                "AvailabilityZones": [
                    "us-east-1b",
                    "us-east-1d"
                ],
                "AvailabilityZoneIds": [
                    "use1-az6",
                    "use1-az2"
                ],
                "LoadBalancerNames": [],
                "TargetGroupARNs": [],
                "HealthCheckType": "EC2",
                "HealthCheckGracePeriod": 0,
                "Instances": [],
                "CreatedTime": {
                    "__class__": "datetime",
                    "year": 2026,
                    "month": 8,
                    "day": 7,
                    "hour": 23,
                    "minute": 51,
                    "second": 48,
                    "microsecond": 721000
                },
                "SuspendedProcesses": [],
                "VPCZoneIdentifier": "subnet-efbcccb7,subnet-044d9e3b66dccd75a",
                "EnabledMetrics": [],
                "Tags": [
                    {
                        "ResourceId": "c7n-nl-asg-2",
                        "ResourceType": "auto-scaling-group",
                        "Key": "AppId",
                        "Value": "APP3003",
                        "PropagateAtLaunch": false
                    },
                    {
                        "ResourceId": "c7n-nl-asg-2",
                        "ResourceType": "auto-scaling-group",
                        "Key": "c7n-fixture",
                        "Value": "network-location",
                        "PropagateAtLaunch": false
                    }
                ],
                "TerminationPolicies": [
                    "Default"
                ],
                "NewInstancesProtectedFromScaleIn": false,
                "ServiceLinkedRoleARN": "arn:aws:iam::644160558196:role/aws-service-role/autoscaling.amazonaws.com/AWSServiceRoleForAutoScaling",
                "TrafficSources": [],
                "AvailabilityZoneDistribution": {
                    "CapacityDistributionStrategy": "balanced-best-effort"
                },
                "CapacityReservationSpecification": {
                    "CapacityReservationPreference": "default"
                },
                "InstanceLifecyclePolicy": {
                    "RetentionTriggers": {
                        "TerminateHookAbandon": "terminate"
                    }
                }
            },
            {
                "AutoScalingGroupName": "c7n-public-test",
                "AutoScalingGroupARN": "arn:aws:autoscaling:us-east-1:644160558196:autoScalingGroup:0cfe2036-353e-4ed2-8a03-4b9223b7eb52:autoScalingGroupName/c7n-public-test",
                "MixedInstancesPolicy": {
                    "LaunchTemplate": {
                        "LaunchTemplateSpecification": {
                            "LaunchTemplateId": "lt-05f69d0ff49a3bf33",
                            "LaunchTemplateName": "c7n-public-test",
                            "Version": "$Default"
                        },
                        "Overrides": [
                            {
                                "InstanceRequirements": {
                                    "VCpuCount": {
                                        "Min": 0,
                                        "Max": 1
                                    },
                                    "MemoryMiB": {
                                        "Min": 0
                                    }
                                }
                            }
                        ]
                    },
                    "InstancesDistribution": {
                        "OnDemandAllocationStrategy": "lowest-price",
                        "OnDemandBaseCapacity": 0,
                        "OnDemandPercentageAboveBaseCapacity": 100,
                        "SpotAllocationStrategy": "lowest-price",
                        "SpotInstancePools": 2
                    }
                },
                "MinSize": 0,
                "MaxSize": 1,
                "DesiredCapacity": 0,
                "DefaultCooldown": 300,
                "AvailabilityZones": [
                    "us-east-1a"
                ],
                "AvailabilityZoneIds": [
                    "use1-az4"
                ],
                "LoadBalancerNames": [],
                "TargetGroupARNs": [],
                "HealthCheckType": "EC2",
                "HealthCheckGracePeriod": 300,
                "Instances": [],
                "CreatedTime": {
                    "__class__": "datetime",
                    "year": 2023,
                    "month": 12,
                    "day": 14,
                    "hour": 21,
                    "minute": 1,
                    "second": 22,
                    "microsecond": 328000
                },
                "SuspendedProcesses": [],
                "VPCZoneIdentifier": "subnet-914763e7",
                "EnabledMetrics": [],
                "Tags": [],
                "TerminationPolicies": [
                    "Default"
                ],
                "NewInstancesProtectedFromScaleIn": false,
                "ServiceLinkedRoleARN": "arn:aws:iam::644160558196:role/aws-service-role/autoscaling.amazonaws.com/AWSServiceRoleForAutoScaling",
                "CapacityRebalance": true,
                "DesiredCapacityType": "units",
                "TrafficSources": [],
                "AvailabilityZoneDistribution": {
                    "CapacityDistributionStrategy": "balanced-best-effort"
                },
                "CapacityReservationSpecification": {
                    "CapacityReservationPreference": "default"
                },
                "InstanceLifecyclePolicy": {
                    "RetentionTriggers": {
                        "TerminateHookAbandon": "terminate"
                    }
                }
            },
            {
                "AutoScalingGroupName": "public",
                "AutoScalingGroupARN": "arn:aws:autoscaling:us-east-1:644160558196:autoScalingGroup:a81eff7e-fbf5-4623-9aa3-f16510c790df:autoScalingGroupName/public",
                "LaunchConfigurationName": "public",
                "MinSize": 0,
                "MaxSize": 0,
                "DesiredCapacity": 0,
                "DefaultCooldown": 300,
                "AvailabilityZones": [
                    "us-east-1d"
                ],
                "AvailabilityZoneIds": [
                    "use1-az2"
                ],
                "LoadBalancerNames": [],
                "TargetGroupARNs": [],
                "HealthCheckType": "EC2",
                "HealthCheckGracePeriod": 300,
                "Instances": [],
                "CreatedTime": {
                    "__class__": "datetime",
                    "year": 2020,
                    "month": 6,
                    "day": 22,
                    "hour": 18,
                    "minute": 3,
                    "second": 25,
                    "microsecond": 639000
                },
                "SuspendedProcesses": [],
                "VPCZoneIdentifier": "subnet-3a334610",
                "EnabledMetrics": [],
                "Tags": [
                    {
                        "ResourceId": "public",
                        "ResourceType": "auto-scaling-group",
                        "Key": "AmazonECSManaged",
                        "Value": "",
                        "PropagateAtLaunch": true
                    },
                    {
                        "ResourceId": "public",
                        "ResourceType": "auto-scaling-group",
                        "Key": "custodian-marked",
                        "Value": "AutoScaleGroup does not meet org policy: delete@2023/09/27 1833 UTC",
                        "PropagateAtLaunch": false
                    }
                ],
                "TerminationPolicies": [
                    "Default"
                ],
                "NewInstancesProtectedFromScaleIn": false,
                "ServiceLinkedRoleARN": "arn:aws:iam::644160558196:role/aws-service-role/autoscaling.amazonaws.com/AWSServiceRoleForAutoScaling",
                "TrafficSources": [],
                "AvailabilityZoneDistribution": {
                    "CapacityDistributionStrategy": "balanced-best-effort"
                },
                "CapacityReservationSpecification": {
                    "CapacityReservationPreference": "default"
                },
                "InstanceLifecyclePolicy": {
                    "RetentionTriggers": {
                        "TerminateHookAbandon": "terminate"
                    }
                }
            },
            {
                "AutoScalingGroupName": "test",
                "AutoScalingGroupARN": "arn:aws:autoscaling:us-east-1:644160558196:autoScalingGroup:1d527d68-6043-462c-8fcd-2c2c5c46f410:autoScalingGroupName/test",
                "LaunchTemplate": {
                    "LaunchTemplateId": "lt-0fe86658990d7b147",
                    "LaunchTemplateName": "c7n-test",
                    "Version": "$Default"
                },
                "MinSize": 0,
                "MaxSize": 0,
                "DesiredCapacity": 0,
                "DefaultCooldown": 300,
                "AvailabilityZones": [
                    "us-east-1a"
                ],
                "AvailabilityZoneIds": [
                    "use1-az4"
                ],
                "LoadBalancerNames": [],
                "TargetGroupARNs": [],
                "HealthCheckType": "EC2",
                "HealthCheckGracePeriod": 300,
                "Instances": [],
                "CreatedTime": {
                    "__class__": "datetime",
                    "year": 2023,
                    "month": 11,
                    "day": 22,
                    "hour": 19,
                    "minute": 2,
                    "second": 36,
                    "microsecond": 917000
                },
                "SuspendedProcesses": [],
                "VPCZoneIdentifier": "subnet-083ab4dd1a8b6eaa6",
                "EnabledMetrics": [],
                "Tags": [],
                "TerminationPolicies": [
                    "Default"
                ],
                "NewInstancesProtectedFromScaleIn": false,
                "ServiceLinkedRoleARN": "arn:aws:iam::644160558196:role/aws-service-role/autoscaling.amazonaws.com/AWSServiceRoleForAutoScaling",
                "TrafficSources": [],
                "AvailabilityZoneDistribution": {
                    "CapacityDistributionStrategy": "balanced-best-effort"
                },
                "CapacityReservationSpecification": {
                    "CapacityReservationPreference": "default"
                },
                "InstanceLifecyclePolicy": {
                    "RetentionTriggers": {
                        "TerminateHookAbandon": "terminate"
                    }
                }
            }
        ],
        "ResponseMetadata": {}
    }
}
