tests/data/placebo/test_asg_network_location/autoscaling.DescribeLaunchConfigurations_1.json
{
    "status_code": 200,
    "data": {
        "LaunchConfigurations": [
            {
                "LaunchConfigurationName": "public",
                "LaunchConfigurationARN": "arn:aws:autoscaling:us-east-1:644160558196:launchConfiguration:d09e9624-ebac-4dc9-b2fd-afdc1f937260:launchConfigurationName/public",
                "ImageId": "ami-09d95fab7fff3776c",
                "KeyName": "cewkey",
                "SecurityGroups": [
                    "sg-0e33f40203e9a81b6"
                ],
                "ClassicLinkVPCSecurityGroups": [],
                "UserData": "",
                "InstanceType": "t2.micro",
                "KernelId": "",
                "RamdiskId": "",
                "BlockDeviceMappings": [
                    {
                        "DeviceName": "/dev/xvda",
                        "Ebs": {
                            "SnapshotId": "snap-074e8f0568ee430f1",
                            "VolumeSize": 8,
                            "VolumeType": "gp2",
                            "DeleteOnTermination": true
                        }
                    }
                ],
                "InstanceMonitoring": {
                    "Enabled": false
                },
                "CreatedTime": {
                    "__class__": "datetime",
                    "year": 2020,
                    "month": 6,
                    "day": 22,
                    "hour": 18,
                    "minute": 2,
                    "second": 50,
                    "microsecond": 323000
                },
                "EbsOptimized": false,
                "AssociatePublicIpAddress": true
            },
            {
                "LaunchConfigurationName": "test-offhours",
                "LaunchConfigurationARN": "arn:aws:autoscaling:us-east-1:644160558196:launchConfiguration:235a486a-81da-44e7-9ac9-9d70b65330a6:launchConfigurationName/test-offhours",
                "ImageId": "ami-02da3a138888ced85",
                "KeyName": "",
                "SecurityGroups": [
                    "sg-0616b55f1f99947fd"
                ],
                "ClassicLinkVPCSecurityGroups": [],
                "UserData": "",
                "InstanceType": "t2.micro",
                "KernelId": "",
                "RamdiskId": "",
                "BlockDeviceMappings": [
                    {
                        "DeviceName": "/dev/xvda",
                        "Ebs": {
                            "SnapshotId": "snap-0ff5b79fdf9b021e8",
                            "VolumeSize": 8,
                            "VolumeType": "gp2",
                            "DeleteOnTermination": true
                        }
                    }
                ],
                "InstanceMonitoring": {
                    "Enabled": false
                },
                "CreatedTime": {
                    "__class__": "datetime",
                    "year": 2019,
                    "month": 3,
                    "day": 11,
                    "hour": 21,
                    "minute": 53,
                    "second": 2,
                    "microsecond": 706000
                },
                "EbsOptimized": false
            }
        ],
        "ResponseMetadata": {}
    }
}
