tests/data/placebo/test_asg_network_location/ec2.DescribeSubnets_1.json
{
    "status_code": 400,
    "data": {
        "Error": {
            "Code": "InvalidSubnetID.NotFound",
            "Message": "The subnet ID 'subnet-3a334610' does not exist"
        },
        "ResponseMetadata": {}
    }
}
